# pdf-organizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pdf_organizer/: classifier.py  cli.py  extractor.py  renamer.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_renamer.py
