[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-organizer"
version = "0.1.0"
description = "CLI tool to scan, classify, rename PDFs and log renames to CSV"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pdfplumber>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pdf-organizer = "pdf_organizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
